# sbe_ctd_proc

./: .gitignore  .python-version  Project_Work_Log.docx  README.md  SBE.py  audit_log.py  config.example.py  config.example.toml  config.py  config_util.py  ctd_file.py  db.py  gui.py  gui_dev.py  manager.py  process.py  pyproject.toml  requirements.txt  sbe_proc.py  ~$oject_Work_Log.docx
config/: config_files_tested.xlsx
config/0890/911plus_0890_01102011/: BinAvg.psa  CellTM.psa
config/0890/911plus_0890_20100107/: Filter.psa  LoopEdit.psa  WildEdit.psa
config/0890/911plus_0890_20120808/: WildEdit.psa
config/0890/911plus_0890_20130925/: CellTM.psa  DatCnv.psa
config/0890/911plus_0890_20140814/: BinAvg.psa
config/0890/911plus_0890_20141230/: AlignCTD.psa
config/0890/911plus_0890_20150729/: AlignCTD.psa  Derive.psa
config/0890/911plus_0890_20241120/: 911plus_0890_dualTC_20241120.xmlcon  AlignCTD.psa  BinAvg.psa  BinAvgIMOS.psa  CellTM.psa  DatCnv.psa  Derive.psa  DeriveIMOS.psa  Filter.psa  LoopEdit.psa  LoopEditIMOS.psa  WildEdit.psa
config/0890/911plus_0890_dualTC_20160705/: WildEdit.psa
config/0890/911plus_0890_dualTC_20180627/: AlignCTD.psa
config/0890/911plus_0890_dualTC_20181229/: Filter.psa
config/0890/911plus_0890_dualTC_20200918/: DatCnv.psa
config/0890/911plus_0890_dualTC_20220901/: AlignCTD.psa
config/0890/911plus_0890_dualTC_20240729/: 911plus_0890_dualTC_20240729.xmlcon  AlignCTD.psa  DatCnv.psa  Filter.psa  WildEdit.psa
config/0890/911plus_0890_dualTC_20241106/: 911plus_0890_dualTC_20241106.xmlcon  AlignCTD.psa
config/0890/911plus_0890_dualTC_20241120/: 911plus_0890_dualTC_20241120.xmlcon  Filter.psa
config/0890/911plus_0890_dualTC_20250506/: 911plus_0890_dualTC_20250506.xmlcon  AlignCTD.psa
config/100/25Plus_100_20020607/: 25-100C.xmlcon  WildEdit.psa
config/100/25Plus_100_20110901/: AlignCTD.psa  DatCnv.psa  WildEdit.psa
config/100/25Plus_100_20130515/: WildEdit.psa
config/1009/25Plus-1009_20150422/: 25Plus-1009_20150422.xmlcon  WildEdit.psa
config/1009/25Plus-1009_20190220/: Filter.psa
config/1009/25Plus_1009_20130515/: AlignCTD.psa  DatCnv.psa  Derive.psa
config/1009/25Plus_100_20020607/: AlignCTD.psa  DatCnv.psa  (+2 more)
config/597/: 191_0597_20111114.xmlcon  191par_598_19960129.con
docs/: overview.md  process_flow.md  tech_issues.md
gui/: app.py  dialog.py  processing_panel.py
src/sbe_ctd_proc/: SBE.py  __init__.py  audit_log.py  cnv_parser.py  config.py  config_util.py  ctd_file.py  db.py  latitude_spreadsheet.py  manager.py  process.py  psa_file.py  viz_cnv.py
test/: test_config_util.py  test_parsing.py
tests/: test_analysis.py  test_audit_log.py  test_cnv_parser.py  test_cnv_parsing.py  test_config_util.py  test_db.py  test_hex_parsing.py  test_latitude_spreadsheet.py  test_parsing.py
tests/data/: 19plus1_4409_20030312_test.hex  19plus2_4525_20140618_test.hex  19plus2_4525_20140618_testCFACLWDB.cnv  19plus2_4525_20150914_test.hex  19plusV2_7360_20141014_testCF.cnv  WQR084.hex  WQR084CFACLWDB.cnv  latitude_lookup_example.xlsx  trip_4859_WQM222.hex  trip_8288_FTZ362.hex
(+319 files in other folders)
