[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbe-ctd-proc"
version = "0.1"
authors = [
    {name = "Arlo White", email = "a.white@aims.gov.au"}
]
readme = "README.md"

requires-python = ">= 3.8"
dependencies = [
    "customtkinter~=5.2.2",
    "pandas~=2.2.3",
    "openpyxl",
    "SQLAlchemy~=2.0.37",
    "sqlalchemy-access~=2.0.3",
    "tomlkit~=0.13.2",
    "seabirdscientific~=2.4.2",
    "nicegui~=2.10.1",
    "starlette>=0.45.3"
]

[project.scripts]
sbe-ctd-proc = "sbe_ctd_proc.gui2:start_gui"
sbe-ctd-proc-OLD = "sbe_ctd_proc.gui:start_gui"

[project.gui-scripts]
sbe-ctd-proc-gui = "sbe_ctd_proc.gui2:start_gui"
sbe-ctd-proc-gui-OLD = "sbe_ctd_proc.gui:start_gui"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.test]
installer = "uv"
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
run = "run-coverage --no-cov"
