[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbe-ctd-proc"
version = "0.1"
description = "Seabird CTD hex file data processor."
authors = [
    {name = "Arlo White", email = "a.white@aims.gov.au"}
]
readme = "README.md"

requires-python = ">= 3.11"
dependencies = [
    "pandas~=2.2.3",
    "openpyxl~=3.1.5",
    "SQLAlchemy~=2.0.37",
    "sqlalchemy-access~=2.0.3",
    "tomlkit~=0.13.2",
    "seabirdscientific~=2.5.2",
    "nicegui~=2.13.0",
    "starlette>=0.45.3",
]

[project.scripts]
sbe-ctd-proc = "sbe_ctd_proc.gui2:start_gui"
sbe-ctd-proc-OLD = "sbe_ctd_proc.gui:start_gui"

[project.gui-scripts]
sbe-ctd-proc-gui = "sbe_ctd_proc.gui2:start_gui"
sbe-ctd-proc-gui-OLD = "sbe_ctd_proc.gui:start_gui"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.test]
installer = "uv"
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
run = "run-coverage --no-cov"

[tool.uv.sources]
seabirdscientific = { git = "https://github.com/arlowhite/seabirdscientific", branch = "fix-cnv-to-instrument-data" }
